<resources>
    <string name="app_name">eBeneficiary Management</string>
    <string name="nfc_package_key">445d15b5f9505713dcdf7ec93ab9126f</string>
    <string name="nfc_offline_key">P8cHLNWJn+ebAe9RrmPOjHGwhWpeKzbqz7v0LuKF3w5ovmNTRkq/K/Nog6zrq17M39BBsO4yImvk1uRSsFQVTw==</string>
    <string name="api_retry_error">Please retry!</string>
    <string name="error">Error !</string>
    <string name="Ok">OK</string>
    <string name="alert">Alert!</string>
    <string name="feature_error">This feature not supported by device</string>
    <string name="some_error">Some Error Occurred!</string>
    <string name="not_supported"> not supported</string>
    <string name="card_not_supported">Card not supported</string>
    <string name="timeout_error">Tap Card Timeout</string>
    <string name="process_cancel_by_user">Process cancelled by user</string>
    <string name="connection_error">Please check your internet connection and try again!</string>
    <string name="alert_out_of_memory">Phone storage is full</string>
    <string name="under_development">Under development</string>
    <string name="under_development_nfc">NFC Under development</string>
    <string name="UnauthorisedAccess">Unauthorised Access!!</string>
    <string name="error_404">HTTP Status 404 – Not Found!!</string>
    <string name="ServerError">Oops! We encountered a internal error. Please check again in a while.</string>
    <string name="error_nfc_not_support">Your device is not support NFC</string>
    <string name="error_nfc_disable">Please enable NFC</string>
    <string name="msg_enable_nfc">Turn on NFC</string>
    <string name="error_fp_scanner">Getting the Scanner Ready</string>
    <string name="error_fp_re_scanner">Reinitialise Scanner</string>
    <string name="please_wait">Please wait…</string>
    <string name="secugen_fingerprint">SecuGen Fingerprint</string>
    <string name="fingerprint_init_failed">Fingerprint device initialization failed!</string>
    <string name="fingerprint_device_not_found">Please attach fingerprint device.</string>
    <string name="secugen_fingerprint_not_found">SecuGen fingerprint sensor not found!</string>
    <string name="next_button">Next</string>
    <string name="username">Username</string>
    <string name="invalid_username">Please enter valid username.</string>
    <string name="empty_username">Please enter username.</string>
    <string name="NotHaveSpace">You don\'t have sufficient amount of space.... Please free some space first</string>
    <string name="NotGettingLocation">Not able to get the location. Please try after sometime</string>
    <string name="Zero">0</string>
    <string name="One">1</string>
    <string name="Two">2</string>
    <string name="Three">3</string>
    <string name="Four">4</string>
    <string name="Five">5</string>
    <string name="Six">6</string>
    <string name="Seven">7</string>
    <string name="Eight">8</string>
    <string name="Nine">9</string>
    <string name="Ten">10</string>
    <string name="Enter_Pin">Enter Pin</string>
    <string name="Login">Login</string>
    <string name="Clear">Clear</string>
    <string name="InvalidPassword">Invalid Password....Please try again</string>
    <string name="username_colum">Username : </string>
    <string name="save">Save</string>
    <string name="district">District</string>
    <string name="district_colm">District : </string>
    <string name="capture">Capture</string>
    <string name="error_duplicate_title">Duplicate Error</string>
    <string name="error_quality_title">Quality Error</string>
    <string name="error_capture_title">Capture Error</string>
    <string name="msg_recapture">Please Recapture again!</string>
    <string name="msg_already_capture">This fingerprint already Captured!</string>
    <string name="take_photo">Camera</string>
    <string name="cancel">Cancel</string>
    <string name="gallery">Gallery</string>
    <string name="select">Select</string>
    <string name="About">About</string>
    <string name="Configurations">Configurations</string>
    <string name="IP_ADDRESS">Input your IP address</string>
    <string name="PORT_NUMBER">Input your Port number</string>
    <string name="MacID">MAC ID</string>
    <string name="Settings">Settings</string>
    <string name="EmptyInputs">Please Input Fields!!!</string>
    <string name="compas_tbc_v">COMPAS eBeneficiary Management v</string>
    <string name="InvalidRole">Invalid role!! unauthorised access</string>
    <string name="noUsers">No users found !!!</string>
    <string name="InvalidUsername">Invalid username !!!</string>
    <string name="Transactions">Transactions</string>
    <string name="image">IMAGE</string>
    <string name="Update">Update</string>
    <string name="CardActivation">Card Activation</string>
    <string name="CardBalance">Card Balance</string>
    <string name="ChangeCardPin">Change Card Pin</string>
    <string name="FormatCard">Format Card</string>
    <string name="Reports">Reports</string>
    <string name="VoidTransaction">Void Transaction</string>
    <string name="ErrorInDownload">Error in downloading data!!</string>
    <string name="Menus">Menus</string>
    <string name="Beneficiary">Beneficiary</string>
    <string name="LogOut">Log Out</string>
    <string name="SummaryReports">Summary Reports</string>
    <string name="SalesTransactionHistory">Sales/Transaction History Report</string>
    <string name="sales_txn_history_title">Sales/Transaction History</string>
    <string name="voidReport">Void Transaction Report</string>
    <string name="sales">Sales Basket Report</string>
    <string name="Xreports">X-Report</string>
    <string name="commodity_report">Daily Commodity Report</string>
    <string name="submitreports">Submit Transaction Report</string>
    <string name="CreateBeneficiary">Create Beneficiary</string>
    <string name="EnrollBeneficiary">Enroll Beneficiary</string>
    <string name="BeneficiaryList">Beneficiary List</string>
    <string name="beneficiary_detail">Beneficiary Details</string>
    <string name="beneficiary_edit">Edit Beneficiary</string>
    <string name="VerifyBeneficiary">Verify Beneficiary</string>
    <string name="please_fill_the_following_beneficiary_information">Please Fill The Following Beneficiary Information</string>
    <string name="first_name">First Name</string>
    <string name="enter_first_name">Enter First Name</string>
    <string name="last_name">Last Name</string>
    <string name="enter_last_name">Enter Last Name</string>
    <string name="identification_type">Identification Type : </string>
    <string name="adhar">Aadhar Card</string>
    <string name="IdentificationNumber">Identification Number</string>
    <string name="IdentificationNo">Identification No</string>
    <string name="EnterIdNo">Enter Identification Number</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="select_date_of_birth">Select date of birth</string>
    <string name="selectgender">Please Select Gender :</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="correspondence_address">Correspondence Address</string>
    <string name="enter_address">Enter your address</string>
    <string name="benfGroup">Beneficiary Group</string>
    <string name="location">Location : </string>
    <string name="get_signature">Get Signature</string>
    <string name="clear_pad">Clear pad</string>
    <string name="save_signature">Save signature</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_first_name">Please enter first name</string>
    <string name="please_enter_last_name">Please enter last name</string>
    <string name="please_select_gender">Please select gender</string>
    <string name="please_provide_gender">Please select gender!!</string>
    <string name="please_select_dob">Please select your DOB</string>
    <string name="enter_identificationno">Please enter your identification number</string>
    <string name="please_provide_address">Please provide your address</string>
    <string name="reports">Reports</string>
    <string name="agreement">I agree the terms and conditions</string>
    <string name="ScanQr">Scan QR code</string>
    <string name="ManuallyActivate">Manually Activate</string>
    <string name="activate">Activate</string>
    <string name="Programme">Programme</string>
    <string name="gender">Gender</string>
    <string name="Name">Name</string>
    <string name="CardNumber">Card Number</string>
    <string name="CardNumberColon">Card Number : </string>
    <string name="CardNo">Card No</string>
    <string name="qrerror">Error while scanning the QR code</string>
    <string name="success">Success</string>
    <string name="BeneficiaryAdded">Beneficiary added successfully</string>
    <string name="beneficiary_update">Beneficiary updated successfully</string>
    <string name="PleaseCaptureImage">Please Capture Image!!</string>
    <string name="PleaseCaptureFingerPrints">Please Capture Finger Prints!!</string>
    <string name="AgentBiometricSaved">Agent biometrics saved successfully</string>
    <string name="MobileNumber">Mobile Number</string>
    <string name="enter_mobile">Enter mobile number</string>
    <string name="search">Search</string>
    <string name="select_criteria">  Search Criteria</string>
    <string name="SearchVia">Search Via :</string>
    <string name="PleaseSelectCriteria">Please select search criteria!!</string>
    <string name="PleaseEnterInput">Please enter inputs</string>
    <string name="BiometricAlreadyCaptured">Biometrics already captured</string>
    <string name="Enroll">Enroll</string>
    <string name="False">False</string>
    <string name="True">True</string>
    <string name="biostatus">Bio Status</string>
    <string name="datee">25/10/2010</string>
    <string name="name">Name : </string>
    <string name="IdNoColon">Identification Number : </string>
    <string name="MinimumFingerError">fingers should be captured !!</string>
    <string name="BiometricUploaded">Biometrics uploaded successfully.</string>
    <string name="title_loading">Loading…</string>
    <string name="title_card_tap">Please Tap the card</string>
    <string name="card_tap_activate">Tap the card for activation</string>
    <string name="card_activated">Card activated successfully</string>
    <string name="card_activate_fail">Card not successfully activated. Please tap card and wait</string>
    <string name="card_format">Formatting card</string>
    <string name="card_remove">Please don\'t remove the card…</string>
    <string name="card_tap_format">Tap To Format Card</string>
    <string name="card_format_success">Card formatted successfully</string>
    <string name="card_error_format">Error formatting this card</string>
    <string name="title_card_restore">Card Restore</string>
    <string name="label_card_tap_restore">Tap Card To Restore Card Data</string>
    <string name="card_restore_success">Card data restore successfully</string>
    <string name="card_reading">Reading the card</string>
    <string name="card_tap_check_bal">Tap Card To Check Balance</string>
    <string name="Quantity">Quantity</string>
    <string name="Amount">Amount</string>
    <string name="benfCount">Beneficiaries</string>
    <string name="language">Select Language</string>
    <string name="update_the_app">Update the app</string>
    <string name="updtxns">Upload Transactions</string>
    <string name="updsync">Upload Pending Synchronisation</string>
    <string name="uploadBenficiary">Upload Beneficiary</string>
    <string name="uploadAgentBiometric">Upload Agent Biometric</string>
    <string name="updTopups">Upload TopupLogs</string>
    <string name="updarchiv">Upload Archive Transactions</string>
    <string name="updatten">Upload Attendance Logs</string>
    <string name="updact">Upload Activity Logs</string>
    <string name="price">Price :</string>
</resources>