<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="20dp"
    tools:context=".ui.beneficiary.enroll_beneficiary.show_beneficiary_fragment.ShowBeneficiaryDetails">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:paddingBottom="20dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:src="@drawable/ic_def_user"
                android:contentDescription="@string/image" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/Name"
                android:textColor="#000" />

            <EditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/IdentificationNumber"
                android:textColor="#000" />

            <EditText
                android:id="@+id/et_idno"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="#000" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/CardNo"
                android:textColor="#000" />

            <EditText
                android:id="@+id/et_cardNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/correspondence_address"
                android:textColor="#000" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:textColor="#000" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth"
                android:textColor="#000" />

            <TextView
                android:id="@+id/tv_displaydate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:text="@string/datee"
                android:layout_weight="65"
                android:textColor="#000" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5sp"
                android:weightSum="90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:text="@string/gender"
                    android:textColor="#000" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:checkedButton="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_male"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:enabled="false"
                        android:text="@string/male"
                        android:textColor="#000" />

                    <CheckBox
                        android:id="@+id/cb_female"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="30"
                        android:enabled="false"
                        android:text="@string/female"
                        android:textColor="#000" />

                </RadioGroup>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:paddingTop="5sp"
                android:weightSum="90">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="30"
                    android:text="@string/biostatus"
                    android:textColor="#000" />

                <RadioGroup
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="60"
                    android:checkedButton="1"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <CheckBox
                        android:id="@+id/cb_t1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="30"
                        android:enabled="false"
                        android:text="@string/True"
                        android:textColor="#000" />

                    <CheckBox
                        android:id="@+id/cb_f1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_weight="30"
                        android:enabled="false"
                        android:text="@string/False"
                        android:textColor="#000" />

                </RadioGroup>
            </LinearLayout>


            <RelativeLayout
                android:id="@+id/relative"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:visibility="visible">

                <Button
                    android:id="@+id/btn_save"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_primary_color"
                    android:text="@string/Enroll"
                    android:textColor="#fff" />

                <Button
                    android:id="@+id/btn_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_toEndOf="@+id/btn_save"
                    android:background="@drawable/btn5_void"
                    android:gravity="center"
                    android:text="@string/cancel"
                    android:textColor="#fff" />

            </RelativeLayout>

        </LinearLayout>

</ScrollView>