<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_centerInParent="true"
    android:layout_height="match_parent"
    tools:context=".ui.cardactivation.CardActivation">

    <include layout="@layout/layout_custom_toolbar"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/sc_benf_details"
        android:visibility="gone"
        android:layout_below="@+id/ll_toolbar">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_margin="10dp"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="match_parent"
                android:orientation="vertical"
                android:gravity="center"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_name"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:textColor="#000000"
                    android:text="@string/Name"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_gender"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:layout_marginTop="20dp"
                    android:text="@string/gender"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_dob"
                    android:textSize="18sp"
                    android:text="@string/date_of_birth"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_idno"
                    android:textSize="18sp"
                    android:text="@string/IdentificationNumber"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:id="@+id/tv_cardno"
                    android:textColor="#000000"
                    android:textSize="18sp"
                    android:text="@string/CardNumber"
                    />


                <Button
                    android:layout_width="300dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="22dp"
                    android:textColor="#ffffff"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/btn_primary_color"
                    android:text="@string/activate"
                    android:layout_marginStart="6dp"
                    android:id="@+id/btn_activate_card"
                    />
            </LinearLayout>
        </androidx.cardview.widget.CardView>

    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:visibility="visible"
        android:layout_below="@+id/ll_toolbar"
        android:id="@+id/ll_activate_options"
        android:layout_margin="50dp"
        android:orientation="vertical"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_sacnqr"
            android:background="@drawable/btn_primary_color"
            android:text="@string/ScanQr"
            android:textColor="@color/bg_color"
            android:textAlignment="center"
            />

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_primary_color"
            android:layout_marginTop="20dp"
            android:id="@+id/btn_manuallyactivate"
            android:text="@string/ManuallyActivate"
            android:textColor="@color/bg_color"
            android:textAlignment="center"
            />

    </LinearLayout>

</RelativeLayout>