<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:orientation="vertical"
    android:focusableInTouchMode="true"
    android:layout_height="wrap_content"
    tools:context=".ui.cardactivation.inputdialog.IdNumberInputDialog">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_margin="50dp"
        android:layout_height="wrap_content">

<RelativeLayout
    android:layout_width="wrap_content"
    android:layout_margin="25dp"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/IdentificationNumber"
        android:id="@+id/text"
        android:textColor="#000000"
        android:textStyle="bold"
        android:textSize="20sp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/text"
        android:lines="1"
        android:id="@+id/et_input"
        android:hint="@string/enter_identificationno"
        android:layout_marginTop="10dp"/>

    <Button
        android:layout_width="50dp"
        android:layout_height="35dp"
        android:id="@+id/buttonOk"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/et_input"
        android:textColor="@color/white"
        android:textAllCaps="false"
        android:layout_alignEnd="@+id/et_input"
        android:text="@string/Ok"
        android:background="@drawable/btn_primary_color"
        />

    <Button
        android:layout_width="70dp"
        android:layout_height="35dp"
        android:id="@+id/cancel"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:textColor="@color/white"
        android:layout_below="@+id/et_input"
        android:layout_toStartOf="@+id/buttonOk"
        android:text="@string/cancel"
        android:background="@drawable/btn5_void"
        />


</RelativeLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>