<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="80dp">


    <CheckBox
        android:id="@+id/cb_remove"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_centerVertical="true"
        android:layout_marginEnd="5dp"
        android:background="?android:attr/listChoiceIndicatorMultiple"
        android:button="@null" />

    <ImageView
        android:layout_width="75dp"
        android:layout_height="75dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="4dp"
        android:layout_centerVertical="true"
        android:layout_toEndOf="@+id/cb_remove"
        android:layout_marginBottom="2dp"
        android:id="@+id/main"
        android:contentDescription="@string/image"
        />


    <!--android:text="@string/name"-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_marginStart="10dp"
        android:layout_toEndOf="@+id/main"
        android:orientation="vertical">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:text="@string/name"
            android:textColor="#000000"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/qty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:text="@string/Quantity"
            android:textColor="#000000"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:maxLength="40"
            android:maxLines="2"
            android:text="@string/price"
            android:textColor="#000000"
            android:textSize="14sp" />

    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorPrimary" />

</RelativeLayout>
