<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
    android:layout_margin="5dp"
    android:id="@+id/cardView"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/name"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/name"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:textAlignment="center"
            android:id="@+id/amount"
            android:textSize="18sp"
            android:text="@string/Amount"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:textColor="@color/black"
            android:id="@+id/count"
            android:textAlignment="center"
            android:textSize="18sp"
            android:text="@string/benfCount"
            android:layout_height="wrap_content"/>

    </LinearLayout>


</androidx.cardview.widget.CardView>